Fix overhang scrollbar on windows machines

--- a/static/sass/features/features.scss
+++ b/static/sass/features/features.scss
@@ -41,7 +41,7 @@ chromedash-legend {
 
     font-size: 120%;
     font-weight: 300;
-    width: $nav-width; // slighty smaller than chromedash-metadata to remove scrollbar
+    //width: $nav-width; // slighty smaller than chromedash-metadata to remove scrollbar
     overflow-x: hidden;
 
     chromedash-metadata {
